# calculadora_churrasco

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testejenkins.txt
Entities/: Participante.cpp  Participante.h  Produto.cpp  Produto.h
Jenkins/: testejenkins.txt
Services/: CMakeLists.txt  DividaService.cpp  DividaService.h  ParticipanteService.cpp  ParticipanteService.h  ProdutoServices.cpp  ProdutoServices.h
Utilities/: CMakeLists.txt
